// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-a88fwk {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-a88fwk[aria-disabled='false'],
.cache-a88fwk[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-a88fwk[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-a88fwk[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-a88fwk[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-a88fwk[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-32xk6b {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-32xk6b+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-32xk6b:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-32xk6b:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-32xk6b[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-32xk6b:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-32xk6b:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-32xk6b[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-32xk6b[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-1b1m7cd {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-1b1m7cd .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-mjz1a9 {
  fill: #b5b7bd;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-a88fwk ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-32xk6b ehkrmld1"
        id="test-test"
        name="test"
        type="radio"
        value="test"
      />
      <svg
        class="cache-1b1m7cd ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-mjz1a9 ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      <label
        for="test-test"
      >
        Radio field
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-a88fwk {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-a88fwk[aria-disabled='false'],
.cache-a88fwk[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-a88fwk[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-a88fwk[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-a88fwk[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-a88fwk[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-32xk6b {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-32xk6b+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-32xk6b:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-32xk6b:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-32xk6b[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-32xk6b:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-32xk6b:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-32xk6b[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-32xk6b[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-1b1m7cd {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-1b1m7cd .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-mjz1a9 {
  fill: #b5b7bd;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-a88fwk ehkrmld0"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-32xk6b ehkrmld1"
        id="test-checked"
        name="test"
        type="radio"
        value="checked"
      />
      <svg
        class="cache-1b1m7cd ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-mjz1a9 ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      <label
        for="test-checked"
      >
        Radio field checked
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-a88fwk {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-a88fwk[aria-disabled='false'],
.cache-a88fwk[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-a88fwk[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-a88fwk[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-a88fwk[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-a88fwk[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-32xk6b {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-32xk6b+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-32xk6b:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-32xk6b:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-32xk6b[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-32xk6b:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-32xk6b:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-32xk6b[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-32xk6b[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-1b1m7cd {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-1b1m7cd .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-mjz1a9 {
  fill: #b5b7bd;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="true"
      class="cache-a88fwk ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="cache-32xk6b ehkrmld1"
        disabled=""
        id="test-disabled"
        name="test"
        type="radio"
        value="disabled"
      />
      <svg
        class="cache-1b1m7cd ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-mjz1a9 ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      <label
        for="test-disabled"
      >
        Radio field disabled
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-a88fwk {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-a88fwk[aria-disabled='false'],
.cache-a88fwk[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-a88fwk:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-a88fwk[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-a88fwk[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-a88fwk[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-a88fwk[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-32xk6b {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-32xk6b+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-32xk6b:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-32xk6b:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-32xk6b[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-32xk6b:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-32xk6b:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-32xk6b[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-32xk6b[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-1b1m7cd {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-1b1m7cd .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-mjz1a9 {
  fill: #b5b7bd;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-a88fwk ehkrmld0"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-32xk6b ehkrmld1"
        id="test-events"
        name="test"
        type="radio"
        value="events"
      />
      <svg
        class="cache-1b1m7cd ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-mjz1a9 ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      <label
        for="test-events"
      >
        Radio field events
      </label>
    </div>
  </form>
</DocumentFragment>
`;
